<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textViewExplanation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textViewExplanation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_explanation"
            android:textSize="20sp"
            android:layout_margin="12dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintBottom_toTopOf="@id/editTextTemplate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <EditText
            android:id="@+id/editTextTemplate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/str_text_box"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:layout_margin="12dp"
            app:layout_constraintTop_toBottomOf="@id/textViewExplanation"
            app:layout_constraintBottom_toTopOf="@id/buttonSave"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_save"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/editTextTemplate"
            app:layout_constraintBottom_toTopOf="@id/textViewStatus"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/buttonSave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



